Version 1.1.0
Minor Changes